[package]
name = "nighthub"
version = "0.1.0"
edition = "2024"

[dependencies]
octocrab = "0.38"
ratatui = "0.29"
tokio = { version = "1.0", features = ["full"] }
webbrowser = "1.0"
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
crossterm = "0.29.0"
env_logger = "0.11.8"
serde_json = "1.0.145"
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.4"
secrecy = { version = "0.8", features = ["serde"] }
dirs = "5"
git2 = "0.19"
async-trait = "0.1"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
tempfile = "3.0"
async-trait = "0.1"
